Fixed flow of radio buttons on mobile

--- a/assets/css/form-basic.css
+++ b/assets/css/form-basic.css
@@ -159,6 +159,10 @@ html{
     margin: 0 0 10px;
   }
 
+  .form-basic .form-radio-buttons{ /* Jordan */
+    display: block;
+  }
+
   .form-basic button{
     margin: 0;
   }
